--- a/tasks/poetry.yml
+++ b/tasks/poetry.yml
@@ -3,39 +3,55 @@ version: "3.0"
 set: ['e', 'u', 'pipefail']
 shopt: ['globstar']
 
-# env:
-
 tasks:
   default:
     desc: "Default task"
     cmds:
       - task --list
 
-  add-test-pypi:
+  add-pypi:
     desc: "Add test-pypi repository"
     cmds:
       - |
-        if [[ -z $(poetry config repositories.test-pypi) ]]; then
-          poetry config repositories.test-pypi https://test.pypi.org/legacy/
-          poetry config pypi-token.test-pypi {{.PYPI_TEST_TOKEN}}
-        fi
-
-  build:
-    desc: "Build the poetry bin"
-    cmds:
-      - poetry build
-
-  publish-test:
-    desc: "Publish the poetry bin"
-    deps: ["add-test-pypi", "build"]
-    cmds:
-      - poetry publish -r test-pypi
+        case {{.CLI_ARGS}} in
+          "test")
+            if [[ -z $(poetry config repositories.test-pypi) ]]; then
+              poetry config repositories.test-pypi https://test.pypi.org/legacy/
+              poetry config pypi-token.test-pypi {{.PYPI_TEST_TOKEN}}
+            fi
+            ;;
+          "prod")
+            if [[ -z $(poetry config repositories.pypi) ]]; then
+              poetry config repositories.pypi https://pypi.org/simple/
+              poetry config pypi-token.pypi {{.PYPI_TOKEN}}
+            fi
+            ;;
+          *|"")
+            echo "Invalid repository"
+            ;;
+        esac
 
   publish:
     desc: "Publish the poetry bin"
-    deps: ["build"]
+    deps: ["add-pypi"]
+    summary: |
+      Release your project to PyPI or TestPyPI.
+
+      Run via `task poetry:publish -- test` to publish to TestPyPI or
+      `task poetry:publish -- prod` to publish to PyPI.
     cmds:
-      - poetry publish
+      - |
+        case {{.CLI_ARGS}} in
+          "test")
+            poetry publish -r test-pypi --build
+            ;;
+          "prod")
+            poetry publish --build
+            ;;
+          *|"")
+            echo "Invalid repository"
+            ;;
+        esac
 
   update-deps:
     desc: "Update dependencies"
