--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,8 +6,12 @@ authors = [
     "Gamaliel Espinoza <gamaliel.espinoza@gmail.com>",
     "pythoninthegrass <4097471+pythoninthegrass@users.noreply.github.com>"
 ]
+packages = [{ include = "gopappy", from = "src" }]
 license = "MIT"
 readme = "README.md"
+
+[tool.poetry.scripts]
+gopappy = "gopappy.cli:main"
 
 [tool.poetry.dependencies]
 python = "^3.11"
