build: dynamic src and bump semver
- Use find_packages to get source code for packaging
- Use poetry's prerelease command to test alpha packages from registry

--- a/tasks/poetry.yml
+++ b/tasks/poetry.yml
@@ -30,6 +30,7 @@ tasks:
             echo "Invalid repository"
             ;;
         esac
+    run: once
     silent: true
 
   build:
@@ -41,6 +42,11 @@ tasks:
     desc: "Install project dependencies"
     cmds:
       - poetry install --no-ansi
+
+  bump-version:
+    desc: "Bump the project version for alpha releases"
+    cmds:
+      - poetry version prerelease --no-ansi
 
   publish:
     desc: "Publish the poetry bin"
