--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,10 +14,12 @@ readme = "README.md"
 gopappy = "gopappy.cli:main"
 
 [tool.poetry.dependencies]
-python = "^3.11"
+python = ">=3.11,<3.13"
+colorama = "^0.4.6"
+keyring = "^24.3.1"
 pycrypto = "^2.6.1"
-requests = "^2.31.0"
 python-decouple = "^3.8"
+requests = "^2.31.0"
 
 [tool.poetry.group.dev.dependencies]
 coverage = "^7.4.3"
