--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,6 +20,7 @@ keyring = "^24.3.1"
 pycrypto = "^2.6.1"
 python-decouple = "^3.8"
 requests = "^2.31.0"
+typer = "^0.9.0"
 
 [tool.poetry.group.dev.dependencies]
 coverage = "^7.4.3"
