--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,22 @@
-certifi==2024.2.2 ; python_version >= "3.11" and python_version < "4.0"
-charset-normalizer==3.3.2 ; python_version >= "3.11" and python_version < "4.0"
-idna==3.6 ; python_version >= "3.11" and python_version < "4.0"
-pycrypto==2.6.1 ; python_version >= "3.11" and python_version < "4.0"
-python-decouple==3.8 ; python_version >= "3.11" and python_version < "4.0"
-requests==2.31.0 ; python_version >= "3.11" and python_version < "4.0"
-urllib3==2.2.1 ; python_version >= "3.11" and python_version < "4.0"
+certifi==2024.2.2 ; python_version >= "3.11" and python_version < "3.13"
+cffi==1.16.0 ; python_version >= "3.11" and python_version < "3.13" and sys_platform == "linux" and platform_python_implementation != "PyPy"
+charset-normalizer==3.3.2 ; python_version >= "3.11" and python_version < "3.13"
+click==8.1.7 ; python_version >= "3.11" and python_version < "3.13"
+colorama==0.4.6 ; python_version >= "3.11" and python_version < "3.13"
+cryptography==42.0.5 ; python_version >= "3.11" and python_version < "3.13" and sys_platform == "linux"
+idna==3.6 ; python_version >= "3.11" and python_version < "3.13"
+importlib-metadata==7.0.1 ; python_version >= "3.11" and python_version < "3.12"
+jaraco-classes==3.3.1 ; python_version >= "3.11" and python_version < "3.13"
+jeepney==0.8.0 ; python_version >= "3.11" and python_version < "3.13" and sys_platform == "linux"
+keyring==24.3.1 ; python_version >= "3.11" and python_version < "3.13"
+more-itertools==10.2.0 ; python_version >= "3.11" and python_version < "3.13"
+pycparser==2.21 ; python_version >= "3.11" and python_version < "3.13" and sys_platform == "linux" and platform_python_implementation != "PyPy"
+pycrypto==2.6.1 ; python_version >= "3.11" and python_version < "3.13"
+python-decouple==3.8 ; python_version >= "3.11" and python_version < "3.13"
+pywin32-ctypes==0.2.2 ; python_version >= "3.11" and python_version < "3.13" and sys_platform == "win32"
+requests==2.31.0 ; python_version >= "3.11" and python_version < "3.13"
+secretstorage==3.3.3 ; python_version >= "3.11" and python_version < "3.13" and sys_platform == "linux"
+typer==0.9.0 ; python_version >= "3.11" and python_version < "3.13"
+typing-extensions==4.10.0 ; python_version >= "3.11" and python_version < "3.13"
+urllib3==2.2.1 ; python_version >= "3.11" and python_version < "3.13"
+zipp==3.17.0 ; python_version >= "3.11" and python_version < "3.12"
