build: add overrideCommand to devcontainer

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -8,6 +8,7 @@
   "service": "app",
   "workspaceFolder": "/app",
   "dockerComposeFile": "../docker-compose.yml",
+  "overrideCommand": true,
   "shutdownAction": "stopCompose",
   "customizations": {
     "vscode": {
