--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,7 +1,7 @@
 [tool.poetry]
 name = "gopappy"
 version = "1.4.0"
-description = "GoDaddy API implementation with cached auth token and protected."
+description = "GoDaddy v1 API implementation with secured auth token."
 authors = [
     "Gamaliel Espinoza <gamaliel.espinoza@gmail.com>",
     "pythoninthegrass <4097471+pythoninthegrass@users.noreply.github.com>"
