--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -21,7 +21,7 @@ jobs:
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install poetry
+          python -m pip install poetry
 
       - name: Publish to PyPI
         env:
@@ -33,5 +33,4 @@ jobs:
             -u __token__ \
             -p $PYPI_TOKEN \
             --no-interaction \
-            --no-ansi \
-            --no-root
+            --no-ansi
