--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,10 +17,11 @@ gopappy = "gopappy.cli:app"
 python = ">=3.11,<3.13"
 colorama = "^0.4.6"
 keyring = "^24.3.1"
-pycrypto = "^2.6.1"
+pycryptodome = "^3.19.1"
 python-decouple = "^3.8"
 requests = "^2.31.0"
 typer = "^0.9.0"
+wheel = "^0.43.0"
 
 [tool.poetry.group.dev.dependencies]
 coverage = "^7.4.3"
