--- a/pyproject.toml
+++ b/pyproject.toml
@@ -24,19 +24,21 @@ typer = "^0.9.0"
 wheel = "^0.43.0"
 
 [tool.poetry.group.dev.dependencies]
-coverage = "^7.4.3"
-hypothesis = {extras = ["cli"], version = "^6.98.17"}
 icecream = "^2.1.3"
 ipython = "^8.22.2"
 poetry-plugin-export = "^1.6.0"
 poetry-plugin-up = "^0.7.1"
+rich = "^13.7.1"
+ruff = "^0.2.1"
+
+[tool.poetry.group.test.dependencies]
+coverage = "^7.4.3"
+hypothesis = {extras = ["cli"], version = "^6.98.17"}
 pytest = "^7.4.4"
 pytest-asyncio = "^0.21.1"
 pytest-cov = "^4.1.0"
 pytest-datafiles = "^3.0.0"
 pytest-xdist = "^3.5.0"
-rich = "^13.7.1"
-ruff = "^0.2.1"
 
 [tool.ruff]
 # Enable pycodestyle (`E`) and Pyflakes (`F`) codes by default.
