--- a/pyproject.toml
+++ b/pyproject.toml
@@ -38,6 +38,7 @@ pytest = "^7.4.4"
 pytest-asyncio = "^0.21.1"
 pytest-cov = "^4.1.0"
 pytest-datafiles = "^3.0.0"
+pytest-mock = "^3.14.0"
 pytest-xdist = "^3.5.0"
 
 [tool.ruff]
