--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -5,11 +5,20 @@ on:
     types:
       - created
   workflow_dispatch:
+  workflow_run:
+    workflows: ["Run pytest"]
+    types:
+      - completed
 
 jobs:
   publish:
+    name: Publish to PyPI
     runs-on: ubuntu-latest
-
+    strategy:
+      fail-fast: true
+    concurrency:
+      group: ${{ github.workflow }}-${{ matrix.dockerfile }}-${{ github.event.workflow_run.head_branch || github.ref }}
+      cancel-in-progress: true
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
