ci: add keyrings-alt

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,6 +17,7 @@ gopappy = "gopappy.cli:app"
 python = ">=3.11,<3.13"
 colorama = "^0.4.6"
 keyring = "^24.3.1"
+keyrings-alt = "^5.0.2"
 pycryptodome = "^3.19.1"
 python-decouple = "^3.8"
 requests = "^2.31.0"
