--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,4 @@
+backports-tarfile==1.2.0 ; python_version >= "3.11" and python_version < "3.12"
 certifi==2024.8.30 ; python_version >= "3.11" and python_version < "3.13"
 cffi==1.17.1 ; python_version >= "3.11" and python_version < "3.13" and sys_platform == "linux" and platform_python_implementation != "PyPy"
 charset-normalizer==3.4.0 ; python_version >= "3.11" and python_version < "3.13"
@@ -7,8 +8,10 @@ cryptography==43.0.1 ; python_version >= "3.11" and python_version < "3.13" and 
 idna==3.10 ; python_version >= "3.11" and python_version < "3.13"
 importlib-metadata==8.5.0 ; python_version >= "3.11" and python_version < "3.12"
 jaraco-classes==3.4.0 ; python_version >= "3.11" and python_version < "3.13"
+jaraco-context==6.0.1 ; python_version >= "3.11" and python_version < "3.13"
 jeepney==0.8.0 ; python_version >= "3.11" and python_version < "3.13" and sys_platform == "linux"
 keyring==24.3.1 ; python_version >= "3.11" and python_version < "3.13"
+keyrings-alt==5.0.2 ; python_version >= "3.11" and python_version < "3.13"
 more-itertools==10.5.0 ; python_version >= "3.11" and python_version < "3.13"
 pycparser==2.22 ; python_version >= "3.11" and python_version < "3.13" and sys_platform == "linux" and platform_python_implementation != "PyPy"
 pycryptodome==3.21.0 ; python_version >= "3.11" and python_version < "3.13"
