--- a/taskfiles/docker.yml
+++ b/taskfiles/docker.yml
@@ -4,18 +4,12 @@ set: ['e', 'u', 'pipefail']
 shopt: ['globstar']
 
 env:
-  BUILD: "{{.TASKFILE_DIR}}/bin/build.sh"
-  COMPOSE_FILE: "{{.TLD}}/docker-compose.yml"
-  DOCKERFILE: "{{.TLD}}/Dockerfile"
+  BUILD: "{{.ROOT_DIR}}/bin/build.sh"
+  COMPOSE_FILE: "{{.ROOT_DIR}}/docker-compose.yml"
+  DOCKERFILE: "{{.ROOT_DIR}}/Dockerfile"
   PLATFORM: "linux/amd64"
 
 tasks:
-  # TODO: list only the current taskfile tasks from parent taskfile
-  default:
-    desc: "Default task"
-    cmds:
-      - task --list
-
   net:
     desc: "Create docker network"
     cmds:
