--- a/.github/workflows/release-please.yml
+++ b/.github/workflows/release-please.yml
@@ -4,6 +4,10 @@ on:
   push:
     branches:
       - 'main'
+    paths:
+      - '**/*.py'
+      - '**/*.sh'
+      - '**/*.md'
 
 permissions:
   contents: write
