--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -1,19 +1,14 @@
 name: Publish to PyPI
 
 on:
+  release:
+    types: [created]
   workflow_dispatch:
-  workflow_run:
-    workflows: ["Run pytest", "Release Please"]
-    types:
-      - completed
 
 jobs:
   publish:
     name: Publish to PyPI
     runs-on: ubuntu-latest
-    if: |
-      github.event_name == 'workflow_dispatch' ||
-      (github.event_name == 'workflow_run' && github.event.workflow_run.conclusion == 'success')
     strategy:
       fail-fast: true
     steps:
